[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bluff"
version = "0.1.0"
description = "Liar's Dice game simulation with AI agents and RL training"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "gymnasium",
    "pettingzoo",
    "scipy",
    "streamlit",
]

[project.optional-dependencies]
rl = [
    "torch",
]

[tool.setuptools.packages.find]
include = ["bluff*"]
